@@ -9,7 +9,7 @@
 
 int main(int argc, char *argv[])
 {
-	const char *version = "2.5.3";
+	const char *version = "2.5.4";
 	if (argc >= 2 && QString(argv[1]) == "-v")
 	{
 		fprintf(stdout, "%s\n", version);
