@@ -30,8 +30,10 @@ public:
 private slots:
 	void on_action_open_photorelation_triggered();
 	void on_action_save_photorelation_triggered();
-	void on_action_add_photos_triggered();
 	void on_action_settings_triggered();
+	void on_action_remove_photos_triggered();
+	
+	void on_action_add_photos_triggered();
 	void on_action_import_gpx_triggered();
 	void on_action_send_to_SSC_triggered();
 
